--- a/src/CleanSolution.Command/CleanSolution.Command.csproj
+++ b/src/CleanSolution.Command/CleanSolution.Command.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-  
-     <Version>21.04.09</Version>
-	  <AssemblyVersion>$(Version)</AssemblyVersion>
-    <FileVersion>$(Version)</FileVersion>
+    <LangVersion>9.0</LangVersion>
+    <Version>21.04.09</Version>
+    <Deterministic>false</Deterministic>
+    <AssemblyVersion>21.04.*.*</AssemblyVersion>
+    <FileVersion>21.04</FileVersion>
     <Authors>Markus Schmidt</Authors>
     <Company>Markus Schmidt (Pro)</Company>
     <Product>CLArgs - Command Line Arguments</Product>
