--- a/src/CleanSolution/nlog.debug.config
+++ b/src/CleanSolution/nlog.debug.config
@@ -2,7 +2,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchEmaila-instance" >
 
   <variable name="LogfileDirectory" value="${currentdir}\Logs" />
-  <variable name="LogfileName" value="boomiCommand" />
+  <variable name="LogfileName" value="cleanSolution" />
   <variable name="LogfileExt" value="Log" />
 
   <targets>
