--- a/src/CleanSolution/nlog.release.config
+++ b/src/CleanSolution/nlog.release.config
@@ -38,7 +38,7 @@
   <rules>
     <logger name="*" minlevel="DEBUG" writeTo="Logfile" />
     <!-- All Console logger message go to Colored Console -->
-    <logger name="Console" minlevel="INFO" writeTo="CommandConsole" final="true" />
+    <logger name="Console" minlevel="INFO" maxLevel="Warn" writeTo="CommandConsole" final="true" />
   </rules>
 
 </nlog>
