--- a/src/CleanSolution/nlog.debug.config
+++ b/src/CleanSolution/nlog.debug.config
@@ -36,7 +36,7 @@
   <rules>
     <logger name="*" minlevel="DEBUG" writeTo="Logfile" /> 
     <logger name="Console" minlevel="Info" writeTo="CommandConsole" final="true" />
-    <logger name="*" minlevel="Info" writeTo="CommandConsole" />
+    <logger name="*" minlevel="Info" maxLevel="Warn" writeTo="CommandConsole" />
   </rules>
 
 </nlog>
