Fixed logging to baseDir

--- a/src/CleanSolution/nlog.debug.config
+++ b/src/CleanSolution/nlog.debug.config
@@ -1,7 +1,7 @@
 ﻿<nlog xmlns="http://www.nlog-project.org/schEmailas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchEmaila-instance" >
 
-  <variable name="LogfileDirectory" value="${currentdir}\Logs" />
+  <variable name="LogfileDirectory" value="${baseDir}\Logs" />
   <variable name="LogfileName" value="cleanSolution" />
   <variable name="LogfileExt" value="Log" />
 
