--- a/src/CleanSolution/Properties/launchSettings.json
+++ b/src/CleanSolution/Properties/launchSettings.json
@@ -7,8 +7,8 @@
     },
     "Clean with profile": {
       "commandName": "Project",
-      "commandLineArgs": "/t=false @sln.profile",
-      "workingDirectory": "C:\\vStudio\\_DevOps\\Mobile\\app02\\src"
+      "commandLineArgs": "CLEANSOLUTION @sln.profile",
+      "workingDirectory": "c:\\vStudio\\moonlit"
     },
     "Show commands": {
       "commandName": "Project",
