--- a/src/CleanSolution/Properties/launchSettings.json
+++ b/src/CleanSolution/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     },
     "Show commands": {
       "commandName": "Project",
-      "commandLineArgs": "VERB1"
+      "commandLineArgs": "CleanSolution"
     },
     "Display Command Help": {
       "commandName": "Project",
