--- a/src/CleanSolution/appsettings.Production.json
+++ b/src/CleanSolution/appsettings.Production.json
@@ -12,7 +12,7 @@
     "rules": [
       {
         "logger": "*",
-        "minLevel": "Debug",
+        "minLevel": "Info",
         "writeTo": "logconsole"
       }
     ]
