--- a/src/CleanSolution/nlog.Development.config
+++ b/src/CleanSolution/nlog.Development.config
@@ -3,40 +3,36 @@
 
   <variable name="LogfileDirectory" value="${baseDir}\Logs" />
   <variable name="LogfileName" value="cleanSolution" />
-  <variable name="LogfileExt" value="Log" />
+  <variable name="LogfileExt" value="log" />
 
   <targets>
 
     <target name="Logfile" xsi:type="File"
             fileName="${LogfileDirectory}\${LogfileName}.${LogfileExt}"
             createDirs="true" archiveFileName="${LogfileDirectory}\${LogfileName}.{#}.${LogfileExt}" archiveEvery="Day"
-            archiveNumbering="Rolling" maxArchiveFiles="30"
+            archiveNumbering="Rolling" maxArchiveFiles="3"
             layout="${longdate}|${level:uppercase=true:padding=-5}|${threadid:padding=4}|${logger:padding=-15}|${message}|${onexception:${NewLine}EXCEPTION\:${exception:format=tostring}}" />
     
     <target xsi:type="ColoredConsole" name="ColoredConsole"
             useDefaultRowHighlightingRules ="true"
             layout="${time} ${level:uppercase=true}(${threadid}): ${message}" >
-    <highlight-row condition="level == LogLevel.Info" foregroundColor="DarkYellow"/>
     </target> 
     
-    <target xsi:type="ColoredConsole" name="CommandConsole" layout="${message}" />
+    <target xsi:type="ColoredConsole" name="CommandConsole" layout="${logger:padding=-15}: ${message}" >
+      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
+      <highlight-row condition="level == LogLevel.Warn" foregroundColor="DarkBlue"/>
+      <highlight-row condition="level == LogLevel.Info" foregroundColor="Black"/>
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGrey"/>
+    </target>
     
-    <!-- <target xsi:type="Debugger" name="DebugConsole" -->
-    <!--         useDefaultRowHighlightingRules ="true" -->
-    <!--         layout="${time} ${level:uppercase=true}(${threadid}): ${message}" /> -->
-
-
-    <target xsi:type="Console" name="Console"
-            layout="${time} ${level:uppercase=true}(${threadid}): ${message}" />
-
     <!-- write to the void aka just remove -->
     <target xsi:type="Null" name="blackhole" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="DEBUG" writeTo="Logfile" /> 
-    <logger name="Console" minlevel="Info" writeTo="CommandConsole" final="true" />
-    <logger name="*" minlevel="Info" maxLevel="Warn" writeTo="CommandConsole" />
+    <logger name="*"              minlevel="DEBUG"  writeTo="Logfile" />
+    <logger name="MSPro.CLArgs.*" maxlevel="INFO"   writeTo="blackhole" final="true"/>
+    <logger name="*"              minlevel="INFO"   writeTo="CommandConsole" final="true" />
   </rules>
 
 </nlog>
