--- a/src/CleanSolution/appsettings.Development.json
+++ b/src/CleanSolution/appsettings.Development.json
@@ -1,15 +1,20 @@
 {
-
+  "Configuration": {
+    "HostConfig": {
+      "Environment": "Development",
+      "NLogConfig": "nLog.Development.config"
+    }
+  },
   "NLog": {
     "targets": {
       "async": false
     },
     "rules": [
-        {
-          "logger": "*",
-          "minLevel": "Debug",
-          "writeTo": "logconsole"
-        }
-      ]
-    }
+      {
+        "logger": "*",
+        "minLevel": "Debug",
+        "writeTo": "logconsole"
+      }
+    ]
   }
+}
