--- a/src/CleanSolution/appsettings.Production.json
+++ b/src/CleanSolution/appsettings.Production.json
@@ -1,4 +1,8 @@
 {
+  "HostConfig" : {
+    "Environment" : "Production",
+    "NLogConfig" : "nLog.Production.config"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
