--- a/src/CleanSolution/CleanSolution.csproj
+++ b/src/CleanSolution/CleanSolution.csproj
@@ -4,24 +4,24 @@
         <OutputType>Exe</OutputType>
         <LangVersion>default</LangVersion>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.08.08</Version>
+        <Version>2.2208.01</Version>
         <Deterministic>false</Deterministic>
-        <AssemblyVersion>2.08.*</AssemblyVersion>
-        <FileVersion>2.08</FileVersion>
+        <AssemblyVersion>2.2208.*</AssemblyVersion>
+        <FileVersion>$(Version)</FileVersion>
         <Authors>Markus Schmidt</Authors>
         <Company>Markus Schmidt (Pro)</Company>
         <Product>CLArgs - Command Line Arguments</Product>
         <Copyright>Copyright (c) 2022, Markus Schmidt (Pro), all rights reserved.</Copyright>
         <ApplicationIcon>CLArgs.ico</ApplicationIcon>
-        <PackageVersion>2.08.19</PackageVersion>
+        <PackageVersion>$(Version)</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <None Remove="appsettings.Development.json"/>
-        <None Remove="appsettings.json"/>
-        <None Remove="appsettings.Production.json"/>
-        <None Remove="CLArgs.ico"/>
-        <None Remove="nlog.Commands.config"/>
+        <None Remove="appsettings.Development.json" />
+        <None Remove="appsettings.json" />
+        <None Remove="appsettings.Production.json" />
+        <None Remove="CLArgs.ico" />
+        <None Remove="nlog.Commands.config" />
 
     </ItemGroup>
 
@@ -37,33 +37,41 @@
             <DependentUpon>appsettings.json</DependentUpon>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <None Remove="nlog.Development.config"/>
+        <None Remove="nlog.Development.config" />
         <Content Include="nlog.Development.config">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <None Remove="nlog.Production.config"/>
+        <None Remove="nlog.Production.config" />
         <Content Include="nlog.Production.config">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0"/>
-        <PackageReference Include="NLog" Version="5.0.2"/>
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.0.2"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+        <PackageReference Include="MSPro.CLArgs" Version="2.2208.2" />
+        <PackageReference Include="NLog" Version="5.0.2" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.0.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\CLArgs\src\MSPro.CLArgs\MSPro.CLArgs.csproj"/>
         <ProjectReference Include="..\CleanSolution.Command\CleanSolution.Command.csproj">
             <Private>true</Private>
         </ProjectReference>
     </ItemGroup>
 
+
     <ItemGroup>
-        <Compile Remove="Program2.cs"/>
-        <Compile Remove="CLArgsService.cs"/>
+      <Reference Include="MSPro.CLArgs">
+        <HintPath>bin\Debug\net6.0\MSPro.CLArgs.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Compile Remove="CLArgsService.cs" />
+      <Compile Remove="Program2.cs" />
     </ItemGroup>
 </Project>
