--- a/src/CleanSolution.Command/CleanSolution.Command.csproj
+++ b/src/CleanSolution.Command/CleanSolution.Command.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>default</LangVersion>
     <Version>2.2303.01</Version>
     <Deterministic>false</Deterministic>
@@ -10,7 +10,8 @@
     <Authors>Markus Schmidt</Authors>
     <Company>Markus Schmidt (Pro)</Company>
     <Product>CLArgs - Command Line Arguments</Product>
-    <Copyright>Copyright (c) 2023, Markus Schmidt (Pro), all rights reserved.</Copyright>
+    <Copyright>Copyright (c) 2022, Markus Schmidt (Pro), all rights reserved.</Copyright>
+    <Nullable>enable</Nullable>
 
   </PropertyGroup>
 
@@ -31,8 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MSPro.CLArgs" Version="2.2208.2" />
   </ItemGroup>
 </Project>
