--- a/src/CleanSolution/CleanSolution.csproj
+++ b/src/CleanSolution/CleanSolution.csproj
@@ -3,10 +3,10 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <LangVersion>default</LangVersion>
-        <TargetFramework>net7.0</TargetFramework>
-        <Version>2.2303.01</Version>
+        <TargetFramework>net8.0</TargetFramework>
+        <Version>2.2312.16</Version>
         <Deterministic>false</Deterministic>
-        <AssemblyVersion>2.2303.*</AssemblyVersion>
+        <AssemblyVersion>2.2312.*</AssemblyVersion>
         <FileVersion>$(Version)</FileVersion>
         <Authors>Markus Schmidt</Authors>
         <Company>Markus Schmidt (Pro)</Company>
@@ -14,6 +14,7 @@
         <Copyright>Copyright (c) 2023, Markus Schmidt (Pro), all rights reserved.</Copyright>
         <ApplicationIcon>CLArgs.ico</ApplicationIcon>
         <PackageVersion>$(Version)</PackageVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -48,12 +49,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
-        <PackageReference Include="MSPro.CLArgs" Version="2.2208.2" />
-        <PackageReference Include="NLog" Version="5.1.2" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.2.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+        <PackageReference Include="MSPro.CLArgs" Version="2.2312.16" />
+        <PackageReference Include="NLog" Version="5.2.7" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.7" />
     </ItemGroup>
 
     <ItemGroup>
