--- a/src/CleanSolution.Command/CleanSolution.Command.csproj
+++ b/src/CleanSolution.Command/CleanSolution.Command.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <LangVersion>default</LangVersion>
-    <Version>3.0.0.0</Version>
+    <Version>3.1.0.0</Version>
     <Deterministic>false</Deterministic>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
@@ -14,6 +14,10 @@
     <Nullable>enable</Nullable>
 
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="V:\packages\nuget\mspro.clargs\5.0.1\contentFiles\any\net8.0\Images\CLArgs.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="cs.bat" />
@@ -32,7 +36,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="MSPro.CLArgs" Version="2.2312.16" />
+    <PackageReference Include="MSPro.CLArgs" Version="5.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanSolution.Services\CleanSolution.Services.csproj" />
   </ItemGroup>
 </Project>
