--- a/src/CleanSolution/nlog.Production.config
+++ b/src/CleanSolution/nlog.Production.config
@@ -1,7 +1,7 @@
 ﻿<nlog xmlns:xsi="http://www.w3.org/2001/XMLSchEmaila-instance"
       xmlns="http://www.nlog-project.org/schEmailas/NLog.xsd">
 
-    <variable name="LogfileDirectory" value="${currentdir}\Logs"/>
+    <variable name="LogfileDirectory" value="Logs"/>
     <variable name="LogfileName" value="boomiCommand"/>
     <variable name="LogfileExt" value="Log"/>
 
