--- a/src/CleanSolution/CleanSolution.csproj
+++ b/src/CleanSolution/CleanSolution.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <LangVersion>default</LangVersion>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Version>2.2208.01</Version>
         <Deterministic>false</Deterministic>
         <AssemblyVersion>2.2208.*</AssemblyVersion>
@@ -15,6 +15,12 @@
         <ApplicationIcon>CLArgs.ico</ApplicationIcon>
         <PackageVersion>$(Version)</PackageVersion>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Compile Remove="pub\**" />
+      <EmbeddedResource Remove="pub\**" />
+      <None Remove="pub\**" />
+    </ItemGroup>
 
     <ItemGroup>
         <None Remove="appsettings.Development.json" />
@@ -48,12 +54,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
-        <PackageReference Include="MSPro.CLArgs" Version="2.2208.2" />
-        <PackageReference Include="NLog" Version="5.0.2" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.0.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
+        <PackageReference Include="MSPro.CLArgs" Version="5.2.0" />
+        <PackageReference Include="NLog" Version="6.0.5" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
     </ItemGroup>
 
     <ItemGroup>
