--- a/src/CleanSolution/CleanSolution.csproj
+++ b/src/CleanSolution/CleanSolution.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <LangVersion>default</LangVersion>
-        <TargetFramework>net9.0</TargetFramework>
-        <Version>3.0.0.0</Version>
+        <TargetFramework>net10.0</TargetFramework>
+        <Version>3.1.0</Version>
         <Deterministic>false</Deterministic>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <FileVersion>$(Version)</FileVersion>
@@ -16,6 +16,10 @@
         <PackageVersion>$(Version)</PackageVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Compile Remove="CLArgsService.cs" />
+    </ItemGroup>
 
     <ItemGroup>
         <None Remove="appsettings.Development.json" />
@@ -49,12 +53,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
         <PackageReference Include="MSPro.CLArgs" Version="5.2.0" />
-        <PackageReference Include="NLog" Version="6.0.5" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
+        <PackageReference Include="NLog" Version="6.0.6" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="6.1.0" />
     </ItemGroup>
 
     <ItemGroup>
